# opentx

./: .gitignore  CREDITS.txt  sdkconfig
cmake/: Macros.cmake
companion/src/: CMakeLists.txt  appdata.cpp  appdata.h  burnconfigdialog - new.ui  burnconfigdialog.cpp  burnconfigdialog.h  burnconfigdialog.ui  companion.cpp  companion.qrc  comparedialog.cpp  comparedialog.h  constants.h  eeprominterface.cpp  eeprominterface.h  flasheepromdialog.cpp  flashfirmwaredialog.cpp  helpers.cpp  helpers.h  mainwindow.cpp  mainwindow.h  mdichild.cpp  modelprinter.cpp  printdialog.cpp  printdialog.h  process_dnld.cpp  process_dnld.h  progresswidget.cpp  progresswidget.h  radiointerface.cpp  simulator.cpp  splashlibrary.cpp  splashlibrary.h  wizarddialog.cpp  wizarddialog.h
companion/src/firmwares/: boards.cpp  boards.h  eepromimportexport.h  generalsettings.cpp  generalsettings.h  modeldata.cpp  modeldata.h  moduledata.cpp  moduledata.h
companion/src/firmwares/er9x/: er9xinterface.cpp
companion/src/firmwares/ersky9x/: ersky9xinterface.cpp
companion/src/firmwares/opentx/: opentxeeprom.cpp  opentxeeprom.h  opentxinterface.cpp
companion/src/generaledit/: CMakeLists.txt  generaledit.cpp  generalsetup.cpp
companion/src/modeledit/: CMakeLists.txt  channels.cpp  channels.h  customfunctions.cpp  customfunctions.h  expodialog.cpp  flightmodes.cpp  flightmodes.h  inputs.cpp  logicalswitches.cpp  mixerdialog.cpp  mixes.cpp  modeledit.cpp  setup.cpp  setup.h  telemetry.cpp  telemetry.h
companion/src/shared/: CMakeLists.txt
companion/src/simulation/: CMakeLists.txt  cursorwidget.h  menuwidget.h  myslider.h  simulatordialog.h  xcursorwidget.h  xmenuwidget.h
companion/src/storage/: CMakeLists.txt  appdata.cpp  appdata.h  binraw.cpp  binraw.h  storage.cpp  storage.h
companion/targets/windows/: companion-msys.nsi.in
doc/esp-wroom-32/: esp-wroom-32-cache.lib  esp-wroom-32-rescue.lib  esp-wroom-32.bak  esp-wroom-32.pro  esp-wroom-32.sch  esp32-WiFi-kit-32-cache.lib  esp32-WiFi-kit-32-rescue.lib  esp32-WiFi-kit-32.lib  esp32-WiFi-kit-32.pro  esp32-WiFi-kit-32.sch  esp32-wroom-32-cache.lib  esp32-wroom-32-rescue.lib  esp32-wroom-32.pro  esp32-wroom-32.sch  sym-lib-table
radio/src/: CMakeLists.txt  Makefile  audio.h  audio_arm.h  audio_avr.h  dataconstants.h  datastructs.h  fonts.h  functions.cpp  gvars.h  keys.cpp  keys.h  loadboot.cpp  logs.cpp  main_esp32.cpp  mixer.cpp  myeeprom.h  opentx.cpp  opentx.h  opentx_types.h  rtos.h  sdcard.cpp  sdcard.h  strhelpers.cpp  strhelpers.h  tasks.cpp  timers.cpp  timers.h  trainer.cpp  translations.cpp  translations.h  vario.cpp
radio/src/gui/: gui_common.cpp  gui_common.h  gui_common_esp32.cpp  screenshot.cpp
radio/src/gui/128x64/: gui.h  lcd.h  menu_model.cpp  menu_radio.cpp  menus.h  model_flightmodes.cpp  model_inputs_mixes.cpp  model_setup.cpp  model_special_functions.cpp  model_telemetry.cpp  navigation.cpp  radio_diaganas.cpp  radio_diagkeys.cpp  radio_hardware_esp32.cpp  radio_setup.cpp  view_main.cpp  view_statistics.cpp  widgets.cpp
radio/src/gui/navigation/: navigation_9x.cpp
radio/src/lua/: CMakeLists.txt  api_general.cpp
radio/src/pulses/: modules.h  modules_constants.h  modules_helpers.h  ppm.cpp  pulses.cpp  pulses.h  pulses_esp32.cpp  pulses_esp32.h
radio/src/storage/: eeprom_common.cpp  eeprom_common.h  storage.h
radio/src/targets/9x/: lcd_driver.cpp
radio/src/targets/common/esp32/: .gitignore  CMakeLists.txt  Readme.md  board_esp32.h  startup.cpp
radio/src/targets/common/esp32/drivers/: ana_driver.cpp  audio_driver.cpp  audio_esp32.cpp  eeprom_driver.cpp  esprc.h  fs_driver.cpp  fs_wrappers.cpp  fs_wrappers.h  keys_driver.cpp  lcd_driver_i2c.cpp  oled_driver_i2c.cpp  pulses_esp32.cpp  pulses_espnow.cpp  pulses_ppm_esp32.cpp  rtc_driver.cpp  sdcard.cpp  telemetry_driver.cpp
radio/src/targets/common/esp32/esp-idf/: CMakeLists.txt  Makefile  log.txt  main.c  partitions.csv  sdkconfig.defaults  sdkconfig.old  stub.c
radio/src/targets/common/esp32/esp-idf/components/drivers/: ana_driver.cpp  audio_driver.cpp  audio_esp32.cpp  component.mk  eeprom_converisons.cpp  eeprom_conversions.cpp  eeprom_conversions.cpp.dis  eeprom_driver.cpp  fs_driver.c  fs_driver.cpp  fs_wrappers.cpp  fs_wrappers.h  keys_driver.cpp  lcd_driver.cpp  pulses_esp32.cpp  sdcard.cpp  telemetry_driver.cpp
radio/src/targets/common/esp32/esp-idf/components/firmware/: component.mk  component.mk.dis  defines.mk  includes.mk
radio/src/targets/common/esp32/esp-idf/components/ftp-server/: WiFi.c  WiFi.h  component.mk  ftp.c  ftp.h  initWiFi.cpp  network.h  startupWiFi.c
radio/src/targets/common/esp32/esp-idf/components/ota_server/: ota_server.c
radio/src/targets/common/esp32/esp-idf/components/ota_server/include/: ota_server.h
radio/src/targets/common/esp32/esp-idf/components/otxcore/: component.mk  defines.mk  includes.mk
radio/src/targets/common/esp32/esp-idf/components/startup/: component.mk  keys_driver.cpp  startup.cpp
radio/src/targets/common/esp32/esp-idf/main/: component.mk  main.c  main_esp32.cpp  main_esp32.cpp.dis  startup.cpp  tool.cpp
radio/src/targets/common/esp32/ftp-server/: WiFi.c  WiFi.h  ftp.c  initWiFi.cpp  network.h
radio/src/targets/common/esp32/main/: startup.cpp
radio/src/targets/common/esp32/ota_server/: README.md  ota_server.c
radio/src/targets/common/esp32/test/: partitions.csv  sdkconfig.old
radio/src/targets/common/esp32/test/main/: component.mk  eeprom_driver.cpp  fs_driver.c  main.cpp
radio/src/targets/esp-heltec-32/: CMakeLists.txt  Readme.md  board.cpp  board.h
radio/src/targets/esp-wroom-32/: CMakeLists.txt  board.cpp  board.h
radio/src/targets/esp-wroom-32/esp-idf/: sdkconfig.defaults
radio/src/targets/mega2560/: board_mega2560.cpp
radio/src/targets/simu/: CMakeLists.txt
radio/src/targets/sky9x/: board.h
radio/src/telemetry/: frsky_d.cpp  telemetry.cpp  telemetry_holders.cpp
radio/src/tests/: timers.cpp
radio/src/translations/: cz.h.txt  de.h.txt  en.h.txt  es.h.txt  fi.h.txt  fr.h.txt  it.h.txt  nl.h.txt  pl.h.txt  pt.h.txt  se.h.txt  tts_en.cpp  untranslated.h
(+6 files in other folders)
